# backend/docs/swagger.json
@@ -892,7 +892,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.RepoFilter"
+                            "$ref": "#/definitions/main.ProjectRepo"
                         }
                     }
                 ],
@@ -1247,6 +1247,42 @@
                     },
                     {
                         "type": "string",
+                        "description": "git用户名",
+                        "name": "gitUserName",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "用户ID",
+                        "name": "userId",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "用户名",
+                        "name": "userName",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "客户端ID",
+                        "name": "clientId",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "工作目录",
+                        "name": "workDir",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "工作目录ID",
+                        "name": "workDirId",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
                         "description": "开始日期(YYYYMMDD)",
                         "name": "startDate",
                         "in": "query"
@@ -1255,6 +1291,60 @@
                         "type": "string",
                         "description": "结束日期(YYYYMMDD)",
                         "name": "endDate",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "一级组织",
+                        "name": "org1",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "二级组织",
+                        "name": "org2",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "三级组织",
+                        "name": "org3",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "四级组织",
+                        "name": "org4",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "五级组织",
+                        "name": "org5",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "六级组织",
+                        "name": "org6",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "七级组织",
+                        "name": "org7",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "八级组织",
+                        "name": "org8",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "九级组织",
+                        "name": "org9",
                         "in": "query"
                     }
                 ],
@@ -2106,6 +2196,10 @@
                 "silica": {
                     "type": "number"
                 },
+                "task_accept_ratios": {
+                    "type": "string",
+                    "example": "[\"0.5\"]"
+                },
                 "task_ids": {
                     "type": "string",
                     "example": "[\"task1\"]"
@@ -2180,9 +2274,6 @@
                 },
                 "period_label": {
                     "type": "string"
-                },
-                "task_count": {
-                    "type": "integer"
                 },
                 "upstream_tokens": {
                     "type": "integer"
@@ -2275,6 +2366,24 @@
                 "avg_efficiency_ratio": {
                     "type": "number"
                 },
+                "commit_efficiency_ratio": {
+                    "type": "number"
+                },
+                "task_efficiency_ratio": {
+                    "type": "number"
+                },
+                "total_branchs": {
+                    "type": "integer"
+                },
+                "total_commit_ancient_minutes": {
+                    "type": "number"
+                },
+                "total_commit_lines": {
+                    "type": "integer"
+                },
+                "total_commit_real_minutes": {
+                    "type": "number"
+                },
                 "total_commits": {
                     "type": "integer"
                 },
@@ -2291,6 +2400,12 @@
                     "type": "integer"
                 },
                 "total_task_ancient_minutes": {
+                    "type": "number"
+                },
+                "total_task_lines": {
+                    "type": "integer"
+                },
+                "total_task_real_minutes": {
                     "type": "number"
                 },
                 "total_tasks": {
@@ -2361,6 +2476,9 @@
                     "type": "string"
                 },
                 "org4": {
+                    "type": "string"
+                },
+                "org_display": {
                     "type": "string"
                 },
                 "task_diff_lines": {
@@ -2502,62 +2620,6 @@
                     "items": {
                         "$ref": "#/definitions/main.OrgSeriesItem"
                     }
-                }
-            }
-        },
-        "main.UserDetail": {
-            "type": "object",
-            "properties": {
-                "commit_ancient_minutes": {
-                    "type": "number"
-                },
-                "commit_diff_lines": {
-                    "type": "integer"
-                },
-                "commit_efficiency_ratio": {
-                    "type": "number"
-                },
-                "commit_real_minutes": {
-                    "type": "number"
-                },
-                "cost": {
-                    "type": "number"
-                },
-                "downstream_tokens": {
-                    "type": "integer"
-                },
-                "org1": {
-                    "type": "string"
-                },
-                "org2": {
-                    "type": "string"
-                },
-                "org3": {
-                    "type": "string"
-                },
-                "org4": {
-                    "type": "string"
-                },
-                "task_ancient_minutes": {
-                    "type": "number"
-                },
-                "task_diff_lines": {
-                    "type": "integer"
-                },
-                "task_efficiency_ratio": {
-                    "type": "number"
-                },
-                "task_real_minutes": {
-                    "type": "number"
-                },
-                "upstream_tokens": {
-                    "type": "integer"
-                },
-                "user_id": {
-                    "type": "string"
-                },
-                "user_name": {
-                    "type": "string"
                 }
             }
         },
@@ -2782,6 +2844,9 @@
                 "silica": {
                     "type": "number"
                 },
+                "user_id": {
+                    "type": "string"
+                },
                 "user_name": {
                     "type": "string"
                 }
@@ -2823,6 +2888,12 @@
                 },
                 "efficiency_ratio": {
                     "type": "number"
+                },
+                "members": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.UserDetail"
+                    }
                 },
                 "project": {
                     "$ref": "#/definitions/main.Project"
@@ -2953,11 +3024,46 @@
                 }
             }
         },
+        "main.ProjectRepo": {
+            "type": "object",
+            "properties": {
+                "end_time": {
+                    "type": "string"
+                },
+                "exclude_commits": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "include_only_commits": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "repo_addr": {
+                    "type": "string"
+                },
+                "repo_branch": {
+                    "type": "string"
+                },
+                "start_time": {
+                    "type": "string"
+                }
+            }
+        },
         "main.ProjectTaskItem": {
             "type": "object",
             "properties": {
+                "accept_ratio": {
+                    "type": "number"
+                },
                 "cost": {
                     "type": "number"
+                },
+                "diff_lines": {
+                    "type": "integer"
                 },
                 "downstream_tokens": {
                     "type": "integer"
@@ -2991,6 +3097,9 @@
                 },
                 "upstream_tokens": {
                     "type": "integer"
+                },
+                "user_id": {
+                    "type": "string"
                 },
                 "user_name": {
                     "type": "string"
@@ -3134,6 +3243,10 @@
                 "silica": {
                     "type": "number"
                 },
+                "task_accept_ratios": {
+                    "type": "string",
+                    "example": "[\"0.5\"]"
+                },
                 "task_ids": {
                     "type": "string",
                     "example": "[\"task1\"]"
@@ -3155,6 +3268,9 @@
                     "type": "string"
                 },
                 "work_dir": {
+                    "type": "string"
+                },
+                "work_dir_id": {
                     "type": "string"
                 }
             }
@@ -3210,35 +3326,6 @@
                     "type": "number"
                 },
                 "repo_real_minutes_reason": {
-                    "type": "string"
-                }
-            }
-        },
-        "main.RepoFilter": {
-            "type": "object",
-            "properties": {
-                "end_time": {
-                    "type": "string"
-                },
-                "exclude_commits": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "include_only_commits": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "repo_addr": {
-                    "type": "string"
-                },
-                "repo_branch": {
-                    "type": "string"
-                },
-                "start_time": {
                     "type": "string"
                 }
             }
@@ -3378,6 +3465,10 @@
                 "silica": {
                     "type": "number"
                 },
+                "task_accept_ratios": {
+                    "type": "string",
+                    "example": "[\"task1\", \"task2\"]"
+                },
                 "task_ids": {
                     "type": "string",
                     "example": "[\"task1\", \"task2\"]"
@@ -3399,6 +3490,9 @@
                     "type": "string"
                 },
                 "work_dir": {
+                    "type": "string"
+                },
+                "work_dir_id": {
                     "type": "string"
                 }
             }
@@ -3543,6 +3637,12 @@
                 "prompt_mode": {
                     "type": "string"
                 },
+                "repo_addr": {
+                    "type": "string"
+                },
+                "repo_branch": {
+                    "type": "string"
+                },
                 "request_content": {
                     "type": "string"
                 },
@@ -3565,6 +3665,12 @@
                     "type": "integer"
                 },
                 "user_input": {
+                    "type": "string"
+                },
+                "work_dir": {
+                    "type": "string"
+                },
+                "work_dir_id": {
                     "type": "string"
                 }
             }
@@ -3661,6 +3767,9 @@
                 "org9": {
                     "type": "string"
                 },
+                "org_display": {
+                    "type": "string"
+                },
                 "repo_addr": {
                     "type": "string"
                 },
@@ -3743,9 +3852,6 @@
         "main.TaskTimeSeriesItem": {
             "type": "object",
             "properties": {
-                "commit_count": {
-                    "type": "integer"
-                },
                 "cost": {
                     "type": "number"
                 },
@@ -3868,6 +3974,80 @@
                     "type": "number"
                 },
                 "task_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.UserDetail": {
+            "type": "object",
+            "properties": {
+                "commit_ancient_minutes": {
+                    "type": "number"
+                },
+                "commit_diff_lines": {
+                    "type": "integer"
+                },
+                "commit_efficiency_ratio": {
+                    "type": "number"
+                },
+                "commit_real_minutes": {
+                    "type": "number"
+                },
+                "cost": {
+                    "type": "number"
+                },
+                "downstream_tokens": {
+                    "type": "integer"
+                },
+                "org1": {
+                    "type": "string"
+                },
+                "org2": {
+                    "type": "string"
+                },
+                "org3": {
+                    "type": "string"
+                },
+                "org4": {
+                    "type": "string"
+                },
+                "org5": {
+                    "type": "string"
+                },
+                "org6": {
+                    "type": "string"
+                },
+                "org7": {
+                    "type": "string"
+                },
+                "org8": {
+                    "type": "string"
+                },
+                "org9": {
+                    "type": "string"
+                },
+                "org_display": {
+                    "type": "string"
+                },
+                "task_ancient_minutes": {
+                    "type": "number"
+                },
+                "task_diff_lines": {
+                    "type": "integer"
+                },
+                "task_efficiency_ratio": {
+                    "type": "number"
+                },
+                "task_real_minutes": {
+                    "type": "number"
+                },
+                "upstream_tokens": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "string"
+                },
+                "user_name": {
                     "type": "string"
                 }
             }
